Fixed video overflow

--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -295,6 +295,7 @@ label {
     float:left;
     width:60%;
     position:relative;
+    overflow:hidden;
 }
 
 .floatright {
